# umbra-app

./: .detoxrc.js  .easignore  .env.example  .gitignore  app.json  capture-cli.mjs  capture-mobile.mjs  capture-screenshots.mjs  capture-tui.tape  eas.json  jest-resolver.js  jest.config.js  jest.integration.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
__mocks__/: fileMock.js  react-native-svg.js
__mocks__/@coexist/: wisp-react-native.js
__mocks__/@umbra/: service.js  wasm.js
__tests__/contexts/: CallContext.test.tsx  (+12 more)
app/: _layout.tsx
eas-hooks/: eas-build-post-install.sh  eas-build-pre-install.sh
patches/: @coexist+wisp-react-native+0.1.1.patch  react-native+0.81.5.patch
plugins/: suppress-os-logs.js
public/: .gitignore  plugins.json
scripts/: build-desktop.sh  build-linux.sh  build-mac.sh  build-mobile.sh  build-relay.sh  build-wasm-debug.sh  build-wasm.sh  build-win.sh  coverage-rust.sh  create-tickets-batch2.mjs  deploy-ghost-finish.sh  deploy.sh  ghost-logs.sh  merge-coverage.sh  patch-wisp.sh  postinstall.js  release.sh  run-dm-test.sh  run-recovery-sync-test.sh  run-send-recv-test.sh  run-sync-test.sh  run-two-device-all.sh  run-two-device-test.sh  start-dev.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: core.rs  crypto.rs  friends.rs  identity.rs  messaging.rs  mod.rs  network.rs  storage.rs
(+664 files in other folders)
