[package]
name = "umbra-desktop"
version = "1.9.0"
edition = "2021"
description = "Umbra desktop application — encrypted P2P messaging"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
umbra-core = { path = "../packages/umbra-core", features = ["ffi"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

[lib]
name = "umbra_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]
